--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Music</title>
+  <title>XMarket</title>
   <link rel="icon" sizes="any" type="image/x-icon" href="/images/57.png">
   <link rel="icon" sizes=any type="image/x-icon" href="/images/57.png">
   <link rel="apple-touch-icon" sizes="57x57" href="images/57.png">
@@ -9,11 +9,7 @@
   <link rel="apple-touch-icon" sizes="114x114" href="images/114.png">
   <link rel="apple-touch-icon" sizes="144x144" href="images/144.png">
 </head>
-<body bgcolor="brown">
-
-  <font face="Verdana"/>
-  <audio id="capitalfm-audio" controls="" src="https://icecast-vgtrk.cdnvideo.ru/capitalfmmp3?v=1710260873424">
-                <source src="https://icecast-vgtrk.cdnvideo.ru/capitalfmmp3"> 
-  </audio>
+<body bgcolor="pink">
+  
 </body>
 </html>
