--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <link rel="apple-touch-icon" sizes="144x144" href="image/144.png">
 </head>
 <body bgcolor="pink">
-  
+  <h1 align="center">XMarket</h1>
 </body>
 </html>
