--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
   <title>XMarket</title>
-  <link rel="icon" sizes="any" type="image/x-icon" href="/image/57.png">
-  <link rel="icon" sizes=any type="image/x-icon" href="/image/57.png">
-  <link rel="apple-touch-icon" sizes="57x57" href="image/57.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="image/72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="image/114.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="image/144.png">
+  <link rel="icon" sizes="any" type="image/x-icon" href="/images/57.png">
+  <link rel="icon" sizes=any type="image/x-icon" href="/images/57.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="images/57.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="images/72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="images/114.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="images/144.png">
 </head>
-<body bgcolor="pink">
+<body background="images/.png">
+  <font face="Verdana">
   <h1 align="center">XMarket</h1>
 </body>
 </html>
