--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" sizes="114x114" href="images/114.png">
   <link rel="apple-touch-icon" sizes="144x144" href="images/144.png">
 </head>
-<body background="images/background.png">
+<body background="images/background.png" width="100%" heigh="100%">
   <font face="Verdana">
   <h1 align="center">XMarket</h1>
 </body>
